style/components/_nav-bar.scss
.nav-bar {
  display: flex;
  align-items: center;

  padding: 0.5em;
  margin: 0 0 1em;

  min-height: 4em;

  background-image: linear-gradient(to top, $fuchsia-blue, $wild-strawberry);
  font-size: 0.875rem;
  line-height: 1;

  @media (max-width: $tablet-breakpoint) {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
  }
}

.nav-bar__left {
  display: inline-block;
}

.nav-bar__right {
  display: inline-block;
  margin-left: auto;

  color: $white;
  font-size: 0.8125rem;
  line-height: 1.2;

  @media (max-width: 890px) {
    display: none;
  }
}

.nav-bar__logo {
  padding-right: 1em;

  @media (max-width: 350px) {
    display: none;
  }
}

.nav-bar__title {
  padding-right: 1.5em;

  font-size: 1.125rem;
  font-weight: 700;

  color: $white;
  text-decoration: none;
}

.nav-bar__links {
  display: inline;

  @media (max-width: 500px) {
    display: block;
    margin-top: 0.5em;
  }
}

.nav-bar__link {
  display: inline-block;

  font-size: 1rem;
  text-transform: lowercase;
  color: $white;
  text-decoration: none;

  &::after {
    content: '|';
    color: $white;
    padding-left: 0.4em;
    padding-right: 0.4em;
  }

  &:last-child {
    &::after {
      content: '';
      padding: 0;
    }
  }
}

.nav-bar__link--active {
  color: $carnation-pink;
}

.nav-bar__author-heart {
  font-size: 1rem;
  color: $carnation-pink;
}

.nav-bar__url {
  color: $white;
  text-decoration: underline;
}

